[tool.poetry]
name = "rin"
version = "0.2.0"
description = "A successor to the Lefi project"
authors = ["an-dyy <andy.development@protonmail.com>"]
license = "MIT"

readme = "README.md"
keywords = ["discord", "discord-api"]
homepage = "https://github.com/an-dyy/Rin"
packages = [{include = "rin"}]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
typing-extensions = "^4.0.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pre-commit = "^2.16.0"
isort = "^5.10.1"
pytest = "^6.2.5"
pytest-asyncio = "^0.17.0"
pytest-cov = "^3.0.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pyright]
ignore = ["rin/logger.py", "tests/"]
typeCheckingMode = "strict"
reportImportCycles = false
reportPrivateUsage = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
